[tool.poetry]
name = "pandakeeper"
version = "0.0.1"
description = "Python library designed to simplify the validation of dataset manipulations."
authors = ["Andrew Sonin <sonin.cel@yandex.ru>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
pandas = "^1.4.2"
pandera = "^0.10.1"

[tool.poetry.dev-dependencies]
ipython = "^8.2.0"
jupyter = "^1.0.0"
jupyterlab = "^3.3.4"
mypy = "^0.942"
toml = "^0.10.2"
types-setuptools = "^57.4.14"
types-toml = "^0.10.5"
pandas-stubs = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=62", "toml>=0.10.2,<0.11"]
build-backend = "poetry.core.masonry.api"
