[tool.poetry]
name = "pandakeeper"
version = "0.0.5"
description = "Python library designed to simplify the validation of dataset manipulations."
repository = "https://github.com/andrewsonin/pandakeeper"
homepage = "https://github.com/andrewsonin/pandakeeper"
authors = ["Andrew Sonin <sonin.cel@yandex.ru>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.7"
pandas = ">=0.0.1"
pandera = ">=0.9"
typing-extensions = ">=4.2"

[tool.poetry.dev-dependencies]
numpy = ">=1.20,<1.21"
pandas = ">1.1,<=1.2"
pandera = "^0.9"
ipython = "^7"
jupyter = "^1.0.0"
jupyterlab = "^3.3.4"
mypy = "^0.942"
toml = "^0.10.2"
types-setuptools = "^57.4.14"
types-toml = "^0.10.5"
pandas-stubs = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=62", "toml>=0.10.2,<0.11"]
build-backend = "poetry.core.masonry.api"
